@@ -4,6 +4,11 @@
 
   22 Mar 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild,
   wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild,
+  wine-1.7.37.ebuild, wine-1.7.38.ebuild, wine-1.7.39.ebuild, wine-9999.ebuild:
+  Fully disable mono and gecko based on USE flags, resolving #441584
+
+  22 Mar 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild,
+  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild,
   wine-1.7.37.ebuild:
   Backport gstreamer code and perl code from gentoo
 
